fixes res nav on mobile

--- a/themes/locize-theme/source/css/theme/header.styl
+++ b/themes/locize-theme/source/css/theme/header.styl
@@ -2,7 +2,7 @@ header
 	background: $primary-dark
 	border-bottom: 1px solid rgba(0,0,0,.1)
 	box-shadow: 0 1px 1px 0 rgba(0,0,0,.1)
-	overflow: hidden
+	overflow-x: visible;
 	position: fixed
 	width: 100%
 	z-index: 1000
